--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -12,6 +12,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: returntocorp/semgrep-action@v1
+    - uses: returntocorp/semgrep-rules-test-action@master
       with:
         auditOn: push
         publishToken: ${{ secrets.SEMGREP_APP_TOKEN }}
