--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -7,7 +7,7 @@ on:
 name: Semgrep
 jobs:
   semgrep:
-    name: Scan
+    name: test
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
