--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -1,21 +1,22 @@
+name: semgrep
+
 on:
-  pull_request: {}
+  pull_request:
+    branches: [master]
   push:
-    branches:
-    - main
-    - master
-name: Semgrep
+    branches: [master]
+
 jobs:
-  semgrep:
-    name: test
+  self_test:
     runs-on: ubuntu-latest
+    name: test
     steps:
-    - uses: actions/checkout@v2
-    - name: test
-      id : test
-      uses: returntocorp/semgrep-rules-test-action@master
-    - uses: actions/upload-artifact@v1
-      if: always()
-      with:
-        name: tests
-        path: ${{ steps.test.outputs.output_dir }}
+      - uses: actions/checkout@v2
+      - name: test
+        id: test
+        uses: returntocorp/semgrep-rules-test-action@master
+      - uses: actions/upload-artifact@v1
+        if: always()
+        with:
+          name: tests
+          path: ${{ steps.test.outputs.output_dir }}
