--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -12,6 +12,7 @@ jobs:
     name: test
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-python@v1
       - name: test
         id: test
         uses: returntocorp/semgrep-rules-test-action@master
